--- a/app/src/main/res/layout/activity_table_combination.xml
+++ b/app/src/main/res/layout/activity_table_combination.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TableCombination"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#211D39"
+    >
 
     <TableLayout
         android:layout_width="match_parent"
@@ -22,6 +24,7 @@
                 android:layout_margin="10dp"
                 android:textSize="25sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -30,6 +33,7 @@
                 android:layout_margin="10dp"
                 android:textSize="25sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -37,6 +41,7 @@
                 android:layout_margin="10dp"
                 android:text="flag"
                 android:textSize="25sp"
+                android:textColor="#fff"
                 />
 
         </TableRow>
@@ -52,6 +57,7 @@
             android:layout_margin="10dp"
             android:textSize="18sp"
             android:gravity="center"
+            android:textColor="#fff"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -60,12 +66,14 @@
             android:layout_margin="10dp"
             android:textSize="18sp"
             android:gravity="center"
+            android:textColor="#fff"
             />
         <ImageView
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:src="@drawable/usd"
             android:gravity="center"
+            android:textColor="#fff"
             />
         </TableRow>
 
@@ -80,6 +88,7 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -88,12 +97,14 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:src="@drawable/eur"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
         </TableRow>
 
@@ -108,7 +119,8 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
-                />
+
+                android:textColor="#fff"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,12 +128,14 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
-                />
+
+                android:textColor="#fff"/>
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:src="@drawable/gbp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
         </TableRow>
 
@@ -136,6 +150,7 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -144,12 +159,14 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ils"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
         </TableRow>
 
@@ -164,6 +181,7 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -172,12 +190,14 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:src="@drawable/aud"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
         </TableRow>
         <TableRow android:layout_marginTop="10dp"
@@ -191,6 +211,7 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -199,6 +220,7 @@
                 android:layout_margin="10dp"
                 android:textSize="18sp"
                 android:gravity="center"
+                android:textColor="#fff"
                 />
             <ImageView
                 android:layout_width="0dp"
@@ -220,6 +242,8 @@
         android:text="back"
         android:textAllCaps="false"
         android:textSize="20dp"
+        android:textColor="#fff"
+        android:background="@drawable/button_custom"
         />
 
 </LinearLayout>
