--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ResultActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#211D39"
+    >
 
     <Button
         android:id="@+id/resultbtn"
@@ -16,6 +18,8 @@
         android:textAllCaps="false"
         android:text="Result"
         android:textSize="20dp"
+        android:textColor="#fff"
+        android:background="@drawable/button_custom"
         />
 
     <TextView
@@ -26,6 +30,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
+        android:textColor="#fff"
         />
 
     <Button
@@ -37,6 +42,8 @@
         android:textAllCaps="false"
         android:text="Back"
         android:textSize="20dp"
+        android:textColor="#fff"
+        android:background="@drawable/button_custom"
         />
 
 </LinearLayout>
