--- a/app/src/main/res/layout/back.xml
+++ b/app/src/main/res/layout/back.xml
@@ -5,6 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="30dp"
+    android:background="#211D39"
+
     >
 <TextView
     android:layout_width="match_parent"
@@ -12,6 +14,7 @@
     android:text="Are you sure you want togo back?"
     android:textSize="20sp"
     android:gravity="center"
+    android:textColor="#fff"
     />
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,12 +29,16 @@
             android:layout_height="wrap_content"
             android:text="yes"
             android:layout_marginRight="30dp"
+            android:textColor="#fff"
+            android:background="@drawable/button_custom"
             />
         <Button
             android:id="@+id/nobtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="no"
+            android:textColor="#fff"
+            android:background="@drawable/button_custom"
             />
 
     </LinearLayout>
